examples/manifests/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-transfer
spec:
  selector:
    app: webhook-transfer
  ports:
  - port: 80
    targetPort: 3000
