examples/manifests/30-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webhook-transfer
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - webhook-transfer.example.com
      secretName: webhook-transfer-tls
  rules:
    - host: webhook-transfer.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webhook-transfer
              servicePort: 80
